fixed squished icon issue

--- a/style.css
+++ b/style.css
@@ -148,6 +148,15 @@ header {
 	margin-top: 1em;
 }
 
+.weather-city {
+	display: block;
+	line-height: .5;
+}
+
+.weather-icon {
+	margin-left: 1.5em;
+}
+
 .forecast-wrapper {
 	grid-template-columns: auto;
 	grid-row-gap: .7em;
